// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip renders correctly with no selection 1`] = `
<div
  class="MuiChip-root "
  selection=""
>
  <span
    class="MuiChip-label"
  />
</div>
`;

exports[`Chip renders correctly with selection 1`] = `
.c0 {
  background-color: !important;
  color: !important;
}

<div
  class="MuiChip-root c0"
  selection="0,1"
>
  <span
    class="MuiChip-label"
  />
</div>
`;

exports[`ChipHolder renders correctly 1`] = `
.c0 {
  margin-right: 0.5rem;
  position: relative;
}

<span
  class="c0"
/>
`;
